<resources>
    <string name="app_name">NewsApp</string>
    <string name="empty_view">No news available!</string>
    <string name="no_connection">No internet connection</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_newest_date_label">Newest Date</string>
    <string name="settings_newest_date_key" translatable="false">from-date</string>
    <string name="settings_newest_date_default" translatable="false">2018-01-01</string>

    <!-- Strings For Order-By Preference -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Strings For Search Keyword Preference -->
    <string name="settings_search_keyword_label">Search Keyword</string>
    <string name="settings_search_keyword_key" translatable="false">search-keyword</string>
    <string name="settings_search_keyword_default" translatable="false">Google</string>

</resources>
